--- a/python_notebook.ipynb
+++ b/python_notebook.ipynb
@@ -1,36 +1,45 @@
 {
     "cells": [
         {
-            "metadata": {},
             "cell_type": "code",
-            "source": "print(\"Test de Integracion Watson Studio - Github\")",
             "execution_count": 1,
+            "metadata": {},
             "outputs": [
                 {
+                    "name": "stdout",
                     "output_type": "stream",
-                    "text": "Test de Integracion Watson Studio - Github\n",
-                    "name": "stdout"
+                    "text": [
+                        "Test de Integración VS code - Github\n"
+                    ]
                 }
+            ],
+            "source": [
+                "print(\"Test de Integración VS code - Github\")"
             ]
         }
     ],
     "metadata": {
         "kernelspec": {
-            "name": "python3",
-            "display_name": "Python 3.9",
-            "language": "python"
+            "display_name": "Python 3.9.7 ('base')",
+            "language": "python",
+            "name": "python3"
         },
         "language_info": {
-            "name": "python",
-            "version": "3.9.12",
-            "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
                 "version": 3
             },
-            "pygments_lexer": "ipython3",
+            "file_extension": ".py",
+            "mimetype": "text/x-python",
+            "name": "python",
             "nbconvert_exporter": "python",
-            "file_extension": ".py"
+            "pygments_lexer": "ipython3",
+            "version": "3.9.7"
+        },
+        "vscode": {
+            "interpreter": {
+                "hash": "ea8238db6dc1fe8cf6fe83219457bde9bcbcde2053d40c59d2e78211d10c5fee"
+            }
         }
     },
     "nbformat": 4,
