Web scraping with BeautifulSoup

--- a/python_notebook.ipynb
+++ b/python_notebook.ipynb
@@ -14,7 +14,8 @@
                 }
             ],
             "source": [
-                "print(\"Test de Integración VS code - Github\")"
+                "print(\"Test de Integración VS code - Github\")\n",
+                "pr"
             ]
         }
     ],
